[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-agent"
version = "0.1.0"
description = "An LLM API proxy that improves response quality through concurrent inference, pivot-tournament verification, and context refinement."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "litellm>=1.40",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
turbo-agent = "turbo_agent.cli:main"

[tool.setuptools.packages.find]
include = ["turbo_agent*"]

[tool.setuptools.package-data]
turbo_agent = ["../frontend/visualizer-dist/**/*"]
